testdata/baselines/reference/submodule/compiler/unusedLocalsAndObjectSpread.errors.txt
unusedLocalsAndObjectSpread.ts(6,12): error TS6133: 'a' is declared but its value is never read.
unusedLocalsAndObjectSpread.ts(20,11): error TS6198: All destructured elements are unused.
unusedLocalsAndObjectSpread.ts(27,21): error TS6133: 'bar' is declared but its value is never read.


==== unusedLocalsAndObjectSpread.ts (3 errors) ====
    declare var console: { log(a: any): void };
    
    function one() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo;
               ~
!!! error TS6133: 'a' is declared but its value is never read.
        console.log(bar);
    }
    
    function two() {
        const foo = { a: 1, b: 2 };
        // '_' is declared but never used
        const {a: _, ...bar} = foo;
        console.log(bar);
    }
    
    function three() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo; // bar should be unused
              ~~~~~~~~~~~
!!! error TS6198: All destructured elements are unused.
        //console.log(bar);
    }
    
    function four() {
        const foo = { a: 1, b: 2 };
        // '_' is declared but never used
        const {a: _, ...bar} = foo; // bar should be unused
                        ~~~
!!! error TS6133: 'bar' is declared but its value is never read.
        //console.log(bar);
    }
    